--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>davidscott.github.io</title>
     </head>
     <body>
-        <h1>davidscott.guthub.io</h1>
+        <h1>My First Website Header</h1>
+        <h2>My Second Website Header</h2>
     </body>
 </html>
