completing in class assignmnet for favorite animal page

--- a/index.html
+++ b/index.html
@@ -2,12 +2,21 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <title>davidscott.github.io</title>
+        <title>The Spider - My Favorite Animal</title>
     </head>
-    <body>
-        <h1>My First Website Header</h1>
-        <h2>My Second Website Header</h2>
-        <h3>TESTING</h3>
-        <h4>TESTING 2</h4>
+    <body style = "background-color: mintcream">
+        <div class = "center">
+            <h1>The Spider - My Favorite Animal</h1>
+        </div>
+        <h2>Circulation and Respiration</h2>
+        <img src = "spider.png" width = 600px height = 300px>
+        <p>
+            Like other arthropods, spiders are coelomates in which the coelom is reduced to small areas round the reproductive and excretory systems. Its place is largely taken by a hemocoel, a cavity that runs most of the length of the body and through which blood flows. The heart is a tube in the upper part of the body, with a few ostia that act as non-return valves allowing blood to enter the heart from the hemocoel but prevent it from leaving before it reaches the front end. However, in spiders, it occupies only the upper part of the abdomen, and blood is discharged into the hemocoel by one artery that opens at the rear end of the abdomen and by branching arteries that pass through the pedicle and open into several parts of the cephalothorax. Hence spiders have open circulatory systems. The blood of many spiders that have book lungs contains the respiratory pigment hemocyanin to make oxygen transport more efficient.
+        </p>
+        <p>
+            Spiders have developed several different respiratory anatomies, based on book lungs, a tracheal system, or both. Mygalomorph and Mesothelae spiders have two pairs of book lungs filled with haemolymph, where openings on the ventral surface of the abdomen allow air to enter and diffuse oxygen. This is also the case for some basal araneomorph spiders, like the family Hypochilidae, but the remaining members of this group have just the anterior pair of book lungs intact while the posterior pair of breathing organs are partly or fully modified into tracheae, through which oxygen is diffused into the haemolymph or directly to the tissue and organs. The trachea system has most likely evolved in small ancestors to help resist desiccation. The trachea were originally connected to the surroundings through a pair of openings called spiracles, but in the majority of spiders this pair of spiracles has fused into a single one in the middle, and moved backwards close to the spinnerets. Spiders that have tracheae generally have higher metabolic rates and better water conservation. Spiders are ectotherms, so environmental temperatures affect their activity.
+        </p>
+        <br>
+
     </body>
 </html>
